Fix top-bar-left on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12074,6 +12074,11 @@ HEADER
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
   padding: 0; }
+  .top-bar .top-bar-left,
+  .top-bar .top-bar-right {
+    -ms-flex: 0 0 auto;
+    -webkit-box-flex: 0;
+    flex: 0 0 auto; }
   .top-bar .logo {
     margin-left: 10px; }
   .top-bar ul {
