--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -20,6 +20,10 @@ HEADER
   background: $white;
   box-shadow: 0 5px 10px rgba(0,0,0,.05);
   padding: 0;
+  .top-bar-left, .top-bar-right{
+    -ms-flex: 0 0 auto;
+    flex: 0 0 auto;
+  }
   .logo{
     margin-left: 10px;
   }
